--- a/templates/mrtg.cfg.erb
+++ b/templates/mrtg.cfg.erb
@@ -1,105 +1,25 @@
-# Created by 
-# /usr/bin/cfgmaker --global 'WorkDir: /var/www/mrtg' --output ./mymrtg.cfg <%= community_name %>@localhost
+# PoolParty MRTG configuration
+#
+# Partially Created by 
+#
+#   /usr/bin/cfgmaker --global 'WorkDir: /var/www/mrtg' --output ./mymrtg.cfg <%= community_name %>@localhost
+#
+# Configs also taken from: 
+# * http://www.linux-sottises.net/en_mrtg.php
+# * http://www.linux-sottises.net/mrtg/linux-sottises.cfg
+#
 
 ### Global Config Options
 WorkDir: /var/www/mrtg
-
-### Global Defaults
+Colours[_]: --#7aafff,--#1000ff,--#006600,--#ff00ff
+XSize[_]: 500
+Ysize[_]: 150
+# Htmldir: /webnew
+# Imagedir: /webnew/images
+# Logdir: /webnew/mrtg/logs
 
 #  to get bits instead of bytes and graphs growing to the right
 # Options[_]: growright, bits
-
 EnableIPv6: no
-WorkDir: /var/www/mrtg
-
-######################################################################
-# System: <%= "todo name" %>
-# Description: Linux <%= "todo name" %> 2.6.21.7-2.fc8xen #1 SMP Fri Feb 15 12:39:36 EST 2008 i686
-# Contact: Root <root@localhost> (configure /etc/snmp/snmpd.local.conf)
-# Location: Unknown (configure /etc/snmp/snmpd.local.conf)
-######################################################################
-
-### Interface 1 >> Descr: 'lo' | Name: 'lo' | Ip: '127.0.0.1' | Eth: '' ###
-### The following interface is commented out because:
-### * it is a Software Loopback interface
-# 
-# Target[localhost_lo]: #lo:<%= community_name %>@localhost:
-# SetEnv[localhost_lo]: MRTG_INT_IP="127.0.0.1" MRTG_INT_DESCR="lo"
-# MaxBytes[localhost_lo]: 1250000
-# Title[localhost_lo]: Traffic Analysis for lo -- <%= hostname %>
-# PageTop[localhost_lo]: <h1>Traffic Analysis for lo -- <%= hostname %></h1>
-# 		<div id="sysdetails">
-# 			<table>
-# 				<tr>
-# 					<td>System:</td>
-# 					<td><%= hostname %> in Unknown (configure /etc/snmp/snmpd.local.conf)</td>
-# 				</tr>
-# 				<tr>
-# 					<td>Maintainer:</td>
-# 					<td>Root &lt;root@localhost&gt; (configure /etc/snmp/snmpd.local.conf)</td>
-# 				</tr>
-# 				<tr>
-# 					<td>Description:</td>
-# 					<td>lo  </td>
-# 				</tr>
-# 				<tr>
-# 					<td>ifType:</td>
-# 					<td>softwareLoopback (24)</td>
-# 				</tr>
-# 				<tr>
-# 					<td>ifName:</td>
-# 					<td>lo</td>
-# 				</tr>
-# 				<tr>
-# 					<td>Max Speed:</td>
-# 					<td>1250.0 kBytes/s</td>
-# 				</tr>
-# 				<tr>
-# 					<td>Ip:</td>
-# 					<td>127.0.0.1 (localhost.localdomain)</td>
-# 				</tr>
-# 			</table>
-# 		</div>
-
-
-### Interface 2 >> Descr: 'eth0' | Name: 'eth0' | Ip: '<%= internal_ip %>' | Eth: '12-31-38-00-a1-e4' ###
-
-Target[localhost_eth0]: #eth0:<%= community_name %>@localhost:
-SetEnv[localhost_eth0]: MRTG_INT_IP="<%= internal_ip %>" MRTG_INT_DESCR="eth0"
-MaxBytes[localhost_eth0]: 1250000
-Title[localhost_eth0]: Traffic Analysis for eth0 -- <%= hostname %>
-PageTop[localhost_eth0]: <h1>Traffic Analysis for eth0 -- <%= hostname %></h1>
-		<div id="sysdetails">
-			<table>
-				<tr>
-					<td>System:</td>
-					<td><%= hostname %> in Unknown (configure /etc/snmp/snmpd.local.conf)</td>
-				</tr>
-				<tr>
-					<td>Maintainer:</td>
-					<td>Root &lt;root@localhost&gt; (configure /etc/snmp/snmpd.local.conf)</td>
-				</tr>
-				<tr>
-					<td>Description:</td>
-					<td>eth0  </td>
-				</tr>
-				<tr>
-					<td>ifType:</td>
-					<td>ethernetCsmacd (6)</td>
-				</tr>
-				<tr>
-					<td>ifName:</td>
-					<td>eth0</td>
-				</tr>
-				<tr>
-					<td>Max Speed:</td>
-					<td>1250.0 kBytes/s</td>
-				</tr>
-				<tr>
-					<td>Ip:</td>
-					<td><%= internal_ip %> (<%= hostname %>.app)</td>
-				</tr>
-			</table>
-		</div>
 
 # vim: ft=config
